--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ExerciseTracker"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBkIP1Zy5p8G3OLnlH3wHYEXW4yhAk_M8E" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -28,5 +33,8 @@
             </intent-filter>
         </activity>
     </application>
+
+
+
 
 </manifest>
